--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styleSheet.css">
     <script src="js/script.js"></script>
 
-    <title>Question 3 - Noughts & Crosses</title>
+    <title>Noughts & Crosses</title>
 
 </head>
 
